services/networking/tls/wallabag/wallabag-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Bookmarked Articles
    gethomepage.dev/group: homesys
    gethomepage.dev/icon: wallabag.png
    gethomepage.dev/name: Wallabag
  labels:
    app.kubernetes.io/name: wallabag
  name: wallabag
  namespace: home
spec:
  rules:
    - host: reading.ocelotspot.com
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: wallabag
              port:
                name: http
  tls:
    - hosts:
        - reading.ocelotspot.com
      secretName: "reading.ocelotspot.com-tls"
